# Operating-System-Project

./: .gitignore  CMakeLists.txt  README.md  bug.txt  draft.txt  main.cpp  note.txt
.github/workflows/: release.yml
Document/Template/: macro.tex  main.tex  setup.tex
Feature/: alias.h  base_conversion.h  bookmark.h  conditional.h  dancing.h  delete_directory.h  directory.h  environment.h  exit_shell.h  features.h  file.h  help.h  history.h  list_directory_tree.h  loop.h  process.h  process_management.h  rename_file.h  scheduler.h  system_utils.h  variables.h
Practice Project 1 - Tiny Shell/: .txt  build.bat  child_process.cpp  countdown.cpp  create.hpp  exit_shell.h  history.txt  main.cpp  move_directory.h  new.cpp  nothing.cpp  open_file.h  sub.hpp  tempCodeRunnerFile.cpp  test.cpp  tictactoe.cpp
Practice Project 1 - Tiny Shell/Feature/: clear_screen.h  conditional.h  copy_directory.h  create_directory.h  environment.h  environment_value.h  features.h  file.h  find_child_processes.h  function.h  functions.h  gui_countdown.h  help.h  history.h  list_processes.h  manage_threads.h  navigation.h  process_management.h  run_script.h  set_color.h  show_calculator.h  start_process.h  suspend_and_resume.h  suspend_and_resume_proc.h  (+3 more)
Process/: CMakeLists.txt  counter.c  duck.cpp  tictactoe.cpp
Research Project 1/: CigaretteSmokers.cpp
Testcase/: Alias.bat  BaseSystem.bat  Condition.bat  Directory.bat  Env.bat  Expression.bat  Fibonacci.bat  File.bat  Function.bat  Process.bat  Statistics.bat  TestAlias.bat  TestDirectory.bat  Tree.bat  Utility.bat  Variable.bat
(+10 files in other folders)
